recursion.lessons.recursion.koch.Crab.scala.error
Crab:11: error: not enough arguments for method avance: (x$1: Double)Unit.
Unspecified value parameter x$1.
	avance()(length);
              ^